--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@wordpress/api-fetch": "^3.20.0",
     "@wordpress/components": "^11.1.0",
     "@wordpress/data": "^4.25.0",
+    "@wordpress/date": "^3.12.0",
     "@wordpress/edit-post": "^3.25.0",
     "@wordpress/element": "^2.18.0",
     "@wordpress/plugins": "^2.23.0",
