mailchimp lists configuratable by type

--- a/public/composer.json
+++ b/public/composer.json
@@ -1,8 +1,7 @@
 {
+    "name": "palasthotel/post-to-mailchimp",
+    "description": "Mailchimp integration",
     "autoload": {
-        "classmap": [
-            "classes"
-        ],
         "psr-4": {
             "Palasthotel\\PostToMailchimp\\": "classes"
         }
